Release 0.1.0: create-jdesk-app scaffolder, Maven/Gradle build choice, classpath templates, docs, publishing
CLI & scaffolding:
- create-jdesk-app (npx): interactive guided setup (name, package default-on-Enter,
  arrow-key template select, spinner, next-steps), --yes/--build/--maven/flags; bundles
  the dev.jdesk.cli generator jar. Zero runtime dependencies.
- Build system choice: Gradle (full tooling) or Maven (pom.xml, build+run via exec:exec).
  Maven template fixed: no Gradle wrapper, correct mvn next-steps, exec JVM args
  (-XstartOnFirstThread on macOS, native access, classpath assets); runs end to end.
- Single-module templates (basic/vanilla/react/vue/svelte) are classpath apps (no
  module-info) for less ceremony; structured stays modular. Plugin/runtime made
  classpath-aware (jdeskPackage/jdeskDev branch on mainModule; jdesk.assets.classpath).
- Real Calculating task graph as no cached configuration is available for tasks: run
> Task :build-logic:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :build-logic:generateExternalPluginSpecBuilders UP-TO-DATE
> Task :build-logic:extractPrecompiledScriptPluginPlugins UP-TO-DATE
> Task :build-logic:compilePluginsBlocks UP-TO-DATE
> Task :build-logic:generatePrecompiledScriptPluginAccessors UP-TO-DATE
> Task :build-logic:generateScriptPluginAdapters UP-TO-DATE
> Task :build-logic:compileKotlin UP-TO-DATE
> Task :build-logic:compileJava NO-SOURCE
> Task :build-logic:pluginDescriptors UP-TO-DATE
> Task :build-logic:processResources UP-TO-DATE
> Task :build-logic:classes UP-TO-DATE
> Task :build-logic:jar UP-TO-DATE
> Task :modules:jdesk-webview-spi:processResources NO-SOURCE
> Task :modules:jdesk-codegen:processResources UP-TO-DATE
> Task :modules:jdesk-api:processResources NO-SOURCE
> Task :modules:jdesk-instance:processResources NO-SOURCE
> Task :examples:hello-vanilla:processResources UP-TO-DATE
> Task :modules:jdesk-testkit:processResources NO-SOURCE
> Task :test-apps:packaging-probe:processResources NO